2012-09-24  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/molecule.dem demo/datastrings.dem:  Remove old labelplot demo
	because it failed to show properly scaled xyz;  instead add equal xyz
	to molecule demo.

	* src/graphics.c docs/plotstyles.gnu:  Fix bug preventing explicit
	assignment of color sequence in stacked histograms.

2012-09-21  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/Makefile.am lisp/Makefile.am lisp/configure.in:
	Fix breakage in "make distcheck".

2012-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Incorrect default layout of rotated xtic labels.
	Bug #3568817

	* lisp/configure.in lisp/Makefile.am:  The autoconfigure scripting for
	the lisp directory is failing when $(EMACS) is redefined by the user.
	But the failure is only relevant to testing/patching info-look.el for
	very old versions of emacs.  Deal with it by simply assuming that
	everyone has an emacs version newer than 20.3 and therefore no patching
	is needed.

	* lisp/info-look.20.2.el lisp/info-look.20.3.el: No longer needed.

2012-09-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c: set datafile separator {whitespace|tab|comma|"<char>"}

	* src/pm3d.c src/set.c src/color.c term/vgagl.trm src/term_api.h:
	The EXTENDED_COLOR_SPECS compile option is relevant only to one
	terminal (vgagl).  Make the corresponding toggle a terminal-specific
	flag rather than a global variable.  Clean up terminal flags.

	* src/axis.c src/axis.h src/mouse.c src/plot2d.c src/util.c:
	Allow zooming of plots that originally had an explicit range in the
	plot command.

	* src/set.c (set_label):  Simplify label parsing.

	* src/graphics.c (plot_filledcurves):  Use cliptorange() instead of
	simpler range check, since it handles reversed axes correctly.

2012-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/post.trm:
	Handle transparent fill patterns in PS_fillbox() in the same way